[package]
name = "koharu-renderer"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
skrifa = { workspace = true }
harfrust = { workspace = true }
icu = { workspace = true }
fontique = { workspace = true }
fontdue = { workspace = true }
wgpu = { workspace = true }
etagere = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
hyphenation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rendering"
harness = false
